--- a/doAn/app/src/main/res/layout/activity_danh_sach_vat_tu.xml
+++ b/doAn/app/src/main/res/layout/activity_danh_sach_vat_tu.xml
@@ -58,96 +58,56 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:background="#FBF9E7" />
+        android:background="#FBF9E7" >
 
-    <LinearLayout
+    </SearchView>
+
+    <TableLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_margin="10dp"
-        android:orientation="horizontal">
+        android:layout_margin="10dp">
 
-        <LinearLayout
-            android:layout_width="75dp"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" >
 
             <TextView
                 android:id="@+id/textView8"
-                android:layout_width="match_parent"
+                android:layout_width="72dp"
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:text="Mã VT"
                 android:textSize="18sp"
                 android:textStyle="bold" />
 
-            <ListView
-                android:id="@+id/lvMaVT_DSVatTu"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="153dp"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
-
             <TextView
                 android:id="@+id/textView7"
-                android:layout_width="match_parent"
+                android:layout_width="138dp"
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:text="Tên"
                 android:textSize="18sp"
                 android:textStyle="bold" />
 
-            <ListView
-                android:id="@+id/lvTenVT_DSVatTu"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent" />
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="94dp"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
-
             <TextView
                 android:id="@+id/textView6"
-                android:layout_width="match_parent"
+                android:layout_width="98dp"
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:text="Đơn vị tính"
                 android:textSize="18sp"
                 android:textStyle="bold" />
 
-            <ListView
-                android:id="@+id/lvDonViTinhVT_DSVatTu"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="1" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
-
             <TextView
                 android:id="@+id/textView9"
-                android:layout_width="match_parent"
+                android:layout_width="83dp"
                 android:layout_height="wrap_content"
+                android:gravity="center"
                 android:text="Giá VT"
                 android:textSize="18sp"
                 android:textStyle="bold" />
+        </TableRow>
+    </TableLayout>
 
-            <ListView
-                android:id="@+id/lvGiaVT_DSVatTu"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="1" />
-        </LinearLayout>
-
-    </LinearLayout>
 
 </LinearLayout>
