--- a/doAn/app/src/main/res/layout/activity_them_cong_trinh.xml
+++ b/doAn/app/src/main/res/layout/activity_them_cong_trinh.xml
@@ -39,7 +39,7 @@
                 android:text="Tên công trình: " />
 
             <EditText
-                android:id="@+id/edtTenCongTrinh_themCongTrinh"
+                android:id="@+id/edtTenCongTrinh_tCT"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -60,7 +60,7 @@
                 android:text="Địa chỉ:" />
 
             <EditText
-                android:id="@+id/edtDiaChi_themCongTrinh"
+                android:id="@+id/edtDiaChi_tCT"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -79,7 +79,7 @@
         >
 
         <Button
-            android:id="@+id/btnThoat_themCongTrinh"
+            android:id="@+id/btnThoat_tCT"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
@@ -90,7 +90,7 @@
             app:backgroundTint="#EAE2A2" />
 
         <Button
-            android:id="@+id/btnThem_themCongTrinh"
+            android:id="@+id/btnThem_tCT"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
