--- a/doAn/app/src/main/res/layout/activity_thong_ke.xml
+++ b/doAn/app/src/main/res/layout/activity_thong_ke.xml
@@ -9,21 +9,14 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/borderradius"
-        android:layout_marginBottom="20dp">
-        <Button
-            android:layout_width="40dp"
-            android:layout_height="wrap_content"
-            android:backgroundTint="#FF9800"
-            android:text="<"
-            android:textSize="20dp"/>
+        android:layout_marginBottom="20dp"
+        android:orientation="horizontal">
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Thống kê"
             android:textSize="20dp"
             android:gravity="center"
-            android:textColor="@color/white"
             android:padding="10dp"/>
     </LinearLayout>
     <LinearLayout
