--- a/doAn/app/src/main/res/menu/them_capnhat_timkiem_bar.xml
+++ b/doAn/app/src/main/res/menu/them_capnhat_timkiem_bar.xml
@@ -2,7 +2,7 @@
 <menu xmlns:tools="http://schemas.android.com/tools"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-
+    <!--        ATB = AcTion Bar-->
     <item
         android:id="@+id/timKiem_ATB"
         app:showAsAction="always"
