--- a/doAn/app/src/main/res/layout/tim_kiem_dialog.xml
+++ b/doAn/app/src/main/res/layout/tim_kiem_dialog.xml
@@ -7,12 +7,14 @@
     android:padding="15dp">
 
     <TextView
+        android:id="@+id/tenTimKiemTv_dialog"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Tìm kiếm"
         android:textSize="25dp"
         />
     <EditText
+        android:id="@+id/timKiemEdt_dialog"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:tooltipText="Nhập chuỗi cần tìm"
