--- a/doAn/app/src/main/res/layout/activity_menu.xml
+++ b/doAn/app/src/main/res/layout/activity_menu.xml
@@ -16,32 +16,44 @@
         android:background="#FFE0B2">
 
         <Button
+            android:id="@+id/btnXem_CT"
             android:layout_marginTop="50dp"
             android:layout_width="150dp"
             android:layout_height="55dp"
             android:textSize="17dp"
             android:text="Công trình"
-            android:background="#FFFFFF"/>
+            android:backgroundTint="@color/btn_background_color"
+            android:textColor="@color/btn_text_color"
+            />
 
         <Button
+            android:id="@+id/btnXem_VT"
             android:layout_marginTop="20dp"
             android:layout_width="150dp"
             android:layout_height="55dp"
             android:textSize="17dp"
-            android:text="Vật tư"/>
+            android:text="Vật tư"
+            android:backgroundTint="@color/btn_background_color"
+            android:textColor="@color/btn_text_color"/>
 
         <Button
+            android:id="@+id/btnXem_TK"
             android:layout_marginTop="20dp"
             android:layout_width="150dp"
             android:layout_height="55dp"
             android:textSize="17dp"
-            android:text="Thống kê"/>
+            android:text="Thống kê"
+            android:backgroundTint="@color/btn_background_color"
+            android:textColor="@color/btn_text_color"/>
     </LinearLayout>
 
     <Button
+        android:id="@+id/btnThoat_menu"
         android:layout_marginTop="80dp"
-        android:layout_width="wrap_content"
-        android:layout_height="55dp"
+        android:padding="5dp"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        android:background="@drawable/custom_btn_thoat"
         android:text="Thoát"/>
 
 
