--- a/doAn/app/src/main/res/layout/cong_trinh_custom_listview.xml
+++ b/doAn/app/src/main/res/layout/cong_trinh_custom_listview.xml
@@ -1,44 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content"
+    android:orientation="horizontal"
+    android:baselineAligned="false">
 
-    <TableRow
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_weight="1"
+        android:orientation="vertical">
 
         <TextView
             android:id="@+id/tenCongTrinhTv_CTLV"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_column="0"
-
-            android:layout_weight="1"
-            android:textSize="20dp" />
-
-        <Button
-            android:id="@+id/xoaBtn_CTLV"
-            android:layout_column="1"
-            android:text="Xoá" />
-    </TableRow>
-
-    <TableRow
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
+            android:layout_height="wrap_content"
+            android:textSize="20sp" />
         <TextView
             android:id="@+id/diaChiCongTrinhTv_CTLV"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:textSize="20dp" />
+            android:layout_height="wrap_content"
+            android:textSize="20sp" />
 
-        <Button
-            android:id="@+id/capNhatBtn_CTLV"
-            android:layout_column="1"
-            android:text="Cập nhật" />
-    </TableRow>
+    </LinearLayout>
 
-</TableLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="7"
+        android:orientation="vertical">
+        <ImageButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/details_vector"
+            android:id="@+id/chiTietBtn_CTLV"
+            android:backgroundTint="@color/black"
+            android:contentDescription="xem chi tiết công trình" />
+
+        <ImageButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/xoaBtn_CTLV"
+            android:src="@drawable/delete_vector"
+            android:backgroundTint="@color/black"
+            android:contentDescription="xoá công trình" />
+    </LinearLayout>
+
+</LinearLayout>
