--- a/doAn/app/src/main/res/layout/activity_danh_sach_vat_tu.xml
+++ b/doAn/app/src/main/res/layout/activity_danh_sach_vat_tu.xml
@@ -7,60 +7,60 @@
     android:orientation="vertical"
     tools:context=".DanhSachVatTu">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="#F8D15D"
-        android:gravity="center"
-        android:orientation="horizontal">
+<!--    <LinearLayout-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:background="#F8D15D"-->
+<!--        android:gravity="center"-->
+<!--        android:orientation="horizontal">-->
 
-        <Button
-            android:id="@+id/btnBack_DSVT"
-            android:layout_width="76dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="5dp"
-            android:layout_marginLeft="5dp"
-            android:layout_marginEnd="20dp"
-            android:layout_marginRight="20dp"
-            android:text="Back"
-            app:backgroundTint="#EAE2A2" />
+<!--        <Button-->
+<!--            android:id="@+id/btnBack_DSVT"-->
+<!--            android:layout_width="76dp"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_marginStart="5dp"-->
+<!--            android:layout_marginLeft="5dp"-->
+<!--            android:layout_marginEnd="20dp"-->
+<!--            android:layout_marginRight="20dp"-->
+<!--            android:text="Back"-->
+<!--            app:backgroundTint="#EAE2A2" />-->
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
-            android:layout_marginLeft="10dp"
-            android:layout_marginEnd="10dp"
-            android:layout_marginRight="10dp"
-            android:background="#F8D15D"
-            android:gravity="center"
-            android:paddingTop="10dp"
-            android:paddingBottom="10dp"
-            android:text="DANH SÁCH VẬT TƯ "
-            android:textSize="20sp"
-            android:textStyle="bold" />
+<!--        <TextView-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_marginStart="10dp"-->
+<!--            android:layout_marginLeft="10dp"-->
+<!--            android:layout_marginEnd="10dp"-->
+<!--            android:layout_marginRight="10dp"-->
+<!--            android:background="#F8D15D"-->
+<!--            android:gravity="center"-->
+<!--            android:paddingTop="10dp"-->
+<!--            android:paddingBottom="10dp"-->
+<!--            android:text="DANH SÁCH VẬT TƯ "-->
+<!--            android:textSize="20sp"-->
+<!--            android:textStyle="bold" />-->
 
-        <Button
-            android:id="@+id/btnThem_DSVT"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="20dp"
-            android:layout_marginLeft="20dp"
-            android:text="Thêm"
-            android:textColor="@color/black"
-            android:textStyle="bold"
-            app:backgroundTint="#EAE2A2" />
+<!--        <Button-->
+<!--            android:id="@+id/btnThem_DSVT"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_marginStart="20dp"-->
+<!--            android:layout_marginLeft="20dp"-->
+<!--            android:text="Thêm"-->
+<!--            android:textColor="@color/black"-->
+<!--            android:textStyle="bold"-->
+<!--            app:backgroundTint="#EAE2A2" />-->
 
-    </LinearLayout>
+<!--    </LinearLayout>-->
 
-    <SearchView
-        android:id="@+id/searchVatTu_DSVT"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:background="#FBF9E7" >
+<!--    <SearchView-->
+<!--        android:id="@+id/searchVatTu_DSVT"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_marginTop="10dp"-->
+<!--        android:background="#FBF9E7" >-->
 
-    </SearchView>
+<!--    </SearchView>-->
 
     <TableLayout
         android:id="@+id/tablelayout_DSVT"
