--- a/doAn/app/src/main/res/layout/activity_thong_ke.xml
+++ b/doAn/app/src/main/res/layout/activity_thong_ke.xml
@@ -7,19 +7,7 @@
     android:orientation="vertical"
     tools:context=".ThongKe">
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="20dp"
-        android:orientation="horizontal">
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Thống kê"
-            android:textSize="20dp"
-            android:gravity="center"
-            android:padding="10dp"/>
-    </LinearLayout>
-    <LinearLayout
+        android:layout_marginTop="20dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
@@ -30,7 +18,7 @@
             android:textColor="@color/black"
             android:textSize="16dp"
             android:background="@drawable/border"
-            android:padding="5dp"/>
+            android:padding="10dp"/>
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -38,7 +26,7 @@
             android:background="@drawable/border"
             android:textColor="@color/black"
             android:textSize="16dp"
-            android:padding="5dp"/>
+            android:padding="10dp"/>
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -46,7 +34,7 @@
             android:background="@drawable/border"
             android:textColor="@color/black"
             android:textSize="16dp"
-            android:padding="5dp"/>
+            android:padding="10dp"/>
     </LinearLayout>
 
 
