--- a/doAn/app/src/main/res/layout/danh_sach_phieu_van_chuyen_custom_listview.xml
+++ b/doAn/app/src/main/res/layout/danh_sach_phieu_van_chuyen_custom_listview.xml
@@ -2,14 +2,15 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="horizontal">
+    android:orientation="horizontal"
+    android:paddingBottom="10dp">
 
     <TextView
         android:id="@+id/ngayVanChuyenTv_CTLV"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:textSize="30sp"
+        android:textSize="20sp"
         android:textStyle="bold" />
 
     <ImageButton
@@ -18,6 +19,7 @@
         android:layout_height="wrap_content"
         android:layout_weight="7"
         android:src="@drawable/details_vector"
+        android:backgroundTint="@color/black"
         android:contentDescription="chi tiết phiếu vận chuyển"/>
 
 
