--- a/doAn/app/src/main/res/layout/activity_danh_sach_vat_tu.xml
+++ b/doAn/app/src/main/res/layout/activity_danh_sach_vat_tu.xml
@@ -4,111 +4,107 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:gravity="center|top"
     android:orientation="vertical"
     tools:context=".DanhSachVatTu">
 
-<!--    <LinearLayout-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:background="#F8D15D"-->
-<!--        android:gravity="center"-->
-<!--        android:orientation="horizontal">-->
-
-<!--        <Button-->
-<!--            android:id="@+id/btnBack_DSVT"-->
-<!--            android:layout_width="76dp"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:layout_marginStart="5dp"-->
-<!--            android:layout_marginLeft="5dp"-->
-<!--            android:layout_marginEnd="20dp"-->
-<!--            android:layout_marginRight="20dp"-->
-<!--            android:text="Back"-->
-<!--            app:backgroundTint="#EAE2A2" />-->
-
-<!--        <TextView-->
-<!--            android:layout_width="wrap_content"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:layout_marginStart="10dp"-->
-<!--            android:layout_marginLeft="10dp"-->
-<!--            android:layout_marginEnd="10dp"-->
-<!--            android:layout_marginRight="10dp"-->
-<!--            android:background="#F8D15D"-->
-<!--            android:gravity="center"-->
-<!--            android:paddingTop="10dp"-->
-<!--            android:paddingBottom="10dp"-->
-<!--            android:text="DANH SÁCH VẬT TƯ "-->
-<!--            android:textSize="20sp"-->
-<!--            android:textStyle="bold" />-->
-
-<!--        <Button-->
-<!--            android:id="@+id/btnThem_DSVT"-->
-<!--            android:layout_width="wrap_content"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:layout_marginStart="20dp"-->
-<!--            android:layout_marginLeft="20dp"-->
-<!--            android:text="Thêm"-->
-<!--            android:textColor="@color/black"-->
-<!--            android:textStyle="bold"-->
-<!--            app:backgroundTint="#EAE2A2" />-->
-
-<!--    </LinearLayout>-->
-
-<!--    <SearchView-->
-<!--        android:id="@+id/searchVatTu_DSVT"-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:layout_marginTop="10dp"-->
-<!--        android:background="#FBF9E7" >-->
-
-<!--    </SearchView>-->
-
-    <TableLayout
-        android:id="@+id/tablelayout_DSVT"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_margin="10dp">
+        android:layout_margin="10dp"
+        android:layout_height="213dp"
+        android:layout_weight="1">
 
-        <TableRow
+        <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="match_parent" >
+            android:layout_height="match_parent">
 
-            <TextView
-                android:id="@+id/textView8"
-                android:layout_width="72dp"
+            <TableLayout
+                android:id="@+id/tablelayout_DSVT"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:gravity="center"
-                android:text="Mã VT"
-                android:textSize="18sp"
-                android:textStyle="bold" />
+                android:stretchColumns="1,3">
 
-            <TextView
-                android:id="@+id/textView7"
-                android:layout_width="138dp"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:text="Tên"
-                android:textSize="18sp"
-                android:textStyle="bold" />
+                <TableRow
+                    android:id="@+id/tableRow0_DSVT"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
 
-            <TextView
-                android:id="@+id/textView6"
-                android:layout_width="98dp"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:text="Đơn vị tính"
-                android:textSize="18sp"
-                android:textStyle="bold" />
+                    <TextView
+                        android:id="@+id/textView8"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:gravity="center"
+                        android:padding="5dp"
+                        android:text="Mã VT"
+                        android:textSize="18sp"
+                        android:textStyle="bold" />
 
-            <TextView
-                android:id="@+id/textView9"
-                android:layout_width="83dp"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:text="Giá VT"
-                android:textSize="18sp"
-                android:textStyle="bold" />
-        </TableRow>
-    </TableLayout>
+                    <TextView
+                        android:id="@+id/textView7"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:gravity="center"
+                        android:padding="5dp"
+                        android:text="Tên"
+                        android:textSize="18sp"
+                        android:textStyle="bold" />
 
+                    <TextView
+                        android:id="@+id/textView6"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:gravity="center"
+                        android:padding="5dp"
+                        android:text="Đơn vị tính"
+                        android:textSize="18sp"
+                        android:textStyle="bold" />
+
+                    <TextView
+                        android:id="@+id/textView9"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:gravity="center"
+                        android:padding="5dp"
+                        android:text="Giá VT"
+                        android:textSize="18sp"
+                        android:textStyle="bold" />
+                </TableRow>
+
+            </TableLayout>
+        </ScrollView>
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:paddingVertical="25dp"
+        android:paddingLeft="50dp"
+        android:paddingRight="50dp">
+
+        <Button
+            android:id="@+id/xoaBtn_DSVT"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginRight="20dp"
+            android:layout_weight="1"
+            android:onClick="xuLyXoaVatTu"
+            android:text="Xoá"
+            android:textColor="@color/black"
+            app:backgroundTint="#EAE2A2" />
+
+        <Button
+            android:id="@+id/suaBtn_DSVT"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginLeft="20dp"
+            android:layout_weight="1"
+            android:onClick="suaVatTu"
+            android:text="Sửa"
+            android:textColor="@color/black"
+            app:backgroundTint="#EAE2A2" />
+    </LinearLayout>
 
 </LinearLayout>
